Domibus 3.3-FR
- Use optional regex validation for dynamic discovery certificate. New property domibus.dynamic.discovery.oasisclient.regexCertificateSubjectValidation.
- Fix sendAttempt counter (initial one plus number of retries defined in the pmode)
- Block the receiving of the message in case the sender's certificate is not valid or revoked.
    Two more properties were added (for more details check domibus.properties file):
        o domibus.sender.certificate.validation.onsending=true
        o domibus.sender.certificate.validation.onreceiving=true
    Renamed "domibus.senderparty.trust.verification" to "domibus.sender.trust.validation.onreceiving". Default value "false" has not been changed.
    Renamed "domibus.certificate.validation.enabled" to "domibus.receiver.certificate.validation.onsending". Default value "true" has not been changed.
- Discard domibus.internal.dispatch.queue from using the DLQ queue.
- Discard domibus.internal.pull.queue from using the DLQ queue.
- Possibility to notify the plugins when the message status changes; new method added in the plugin API: eu.domibus.plugin.BackendConnector.messageStatusChanged(eu.domibus.common.MessageStatusChangeEvent)
- Performance improvements
Domibus 3.3-RC1
- Configuration of Domibus is done with domibus.properties instead of externalized spring xml files
- Add the possibility to pull messages
- Expose the DOWNLOADED message status in the plugin API and the default ws plugin
- Deprecated the methods eu.domibus.plugin.AbstractBackendConnector.getMessageStatus(String messageId) and eu.domibus.plugin.handler.MessageRetriever.getMessageStatus(String messageId) which converts the DOWNLOADED status to RECEIVED. Use the new getStatus(String messageId) method instead.
- Deprecated the following methods from eu.domibus.plugin.webService.impl.BackendWebServiceImpl in the Default WS Plugin:
    o sendMessage(SubmitRequest, Messaging). Use submitMessage(SubmitRequest, Messaging) which add support for large files.